                       User-Visible WebAuth Changes

WebAuth 4.6.1 (unreleased)

    Support for AuthType StanfordAuth (for backward compatibility with
    WebAuth 2.5) was broken in WebAuth 4.6.0, causing mod_webauth to
    reject all accesses to resources protected with that AuthType.  This
    has been fixed in this release.

    Show the expiring password warning in WebLogin if the browser request
    was a POST.  Previously, it was skipped if the user had a REMOTE_USER
    preference or if the browser presented a single sign-on cookie.  This
    was too conservative, not warning in cases when REMOTE_USER failed,
    when the browser presented an expired single sign-on cookie (systems
    that are suspended rather than shut down, for example), and when the
    user has to do multifactor authentication.  Checking for a POST is a
    closer match for when we can force a confirmation screen without too
    much user disruption.

    In WebLogin, verify that the username form field was sent before
    attempting to do multifactor operations and return an error if it
    isn't, avoiding undefined variable warnings and other errors deeper in
    the WebLogin code.

    If a user may switch to a different authorization identity, force
    display of the confirmation page in WebLogin even if this is normally
    disabled.  Otherwise, there is no opportunity for the user to change
    identities.

    Fix compilation when remctl support is not enabled.

    Add new factors mp (mobile push) and v (voice), which count as
    separate classes for determining multifactor.  This means the
    combination of those factors with any other factor class will result
    in a synthensized multifactor factor.

    Warn in the mod_webauth documentation that, when using credential
    delegation to a load-balanced pool, all members of that pool must have
    the same Kerberos identity.

WebAuth 4.6.0 (2014-03-18)
