@@ -7,6 +7,15 @@ WebAuth 4.6.1 (unreleased)
     reject all accesses to resources protected with that AuthType.  This
     has been fixed in this release.
 
+    Add a new configuration directive, WebKdcFastArmorCache, for
+    mod_webkdc.  If set, this specifies the path to a Kerberos ticket
+    cache that can (and must) be used for FAST (Flexible Authentication
+    Secure Tunneling) protection of Kerberos password authentications.
+    The Kerberos KDC must also support FAST in order to safely enable this
+    option.  Based on a patch by Jakob Uhd Jepsen (One.com A/S).
+
+    Fix parsing of the WebKdcKerberosFactors configuration directive.
+
     Show the expiring password warning in WebLogin if the browser request
     was a POST.  Previously, it was skipped if the user had a REMOTE_USER
     preference or if the browser presented a single sign-on cookie.  This
